--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,13 @@ dependencies:
   google_generative_ai: ^0.4.3
   flutter_dotenv: ^5.1.0
   flutter_riverpod: ^2.5.1
+  freezed_annotation: ^2.4.4
+  riverpod_annotation: ^2.3.5
+  
 
 dev_dependencies:
+  
+
   flutter_test:
     sdk: flutter
 
@@ -49,6 +54,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.11
+  riverpod_generator: ^2.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
