--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
+  csv: ^6.0.0
   
 
 dev_dependencies:
@@ -70,6 +71,7 @@ flutter:
   assets:
     - .env
     - lib/assets/
+    - lib/assets/japanese_proverbs.csv
 
   # To add assets to your application, add an assets section, like this:
   # assets:
