--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   riverpod_annotation: ^2.3.5
   csv: ^6.0.0
+  fast_csv: ^0.2.11
   
 
 dev_dependencies:
