--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   riverpod_annotation: ^2.3.5
   csv: ^6.0.0
   fast_csv: ^0.2.11
+  google_translate: ^0.0.6
+  translator: ^1.0.0
   
 
 dev_dependencies:
