--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - .env
     - lib/assets/
     - lib/assets/japanese_proverbs.csv
+    - lib/assets/pattern_data.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
