--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   langchain: ^0.0.3
   langchain_google: ^0.0.1-dev.1
   google_fonts: ^6.2.1
+  dart_openai: ^5.1.0
+  http: ^1.2.2
   
 
 dev_dependencies:
