--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_fonts: ^6.2.1
   dart_openai: ^5.1.0
   http: ^1.2.2
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
@@ -69,6 +70,7 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
+
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -85,6 +87,15 @@ flutter:
     - family: hiragino
       fonts:
         - asset: lib/assets/fonts/hiragino.ttc
+flutter_icons:
+  ios: true
+  image_path: "lib/assets/icon_square.png"
+  remove_alpha_ios: true
+  android: true
+  adaptive_icon_background: "lib/assets/icon_background.png"
+  adaptive_icon_foreground: "lib/assets/icon_foreground.png"
+          
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
