--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <uses-permission android:name="android.permission.INTERNET" />
  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> 
     <application
-        android:label="writing_learner"
+        android:label="Wridge"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
