--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   dart_openai: ^5.1.0
   http: ^1.2.2
   flutter_launcher_icons: ^0.13.1
+  syncfusion_flutter_gauges: ^26.2.14
+  sqflite: ^2.3.3+1
+  path: ^1.9.0
   
 
 dev_dependencies:
