--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   sqflite: ^2.3.3+1
   path: ^1.9.0
   shared_preferences: ^2.3.2
+  webview_flutter: ^4.9.0
   
 
 dev_dependencies:
